fix: change letter spacing in navigation

--- a/assets/css/singolo1.css
+++ b/assets/css/singolo1.css
@@ -52,13 +52,13 @@ header > div {
 }
 .navbar {
   font-size: 12px;
-  
+  letter-spacing: -0.18px;
 }
 
 .navbar > span:before {
   content: "\00a0\00a0\00a0\00a0\00a0\00a0·\00a0\00a0\00a0\00a0\00a0\00a0";
   color: var(--menu-separator);
-  letter-spacing: -0.4px;
+  letter-spacing: -0.26px;
 }
 
 .navbar > span:first-child:before {
